# claude-kanban

./: .gitignore  CLAUDE.md  LICENSE  README.md  index.html  package-lock.json  package.json  vitest.config.ts
.github/workflows/: pages.yml  release.yml
docs/: README.md  index.html
docs/assets/: README.md
docs/scripts/: counters.js  downloads.js  nav.js  reveal.js  theme.js  tiles.js  tilt.js
docs/styles/: atmosphere.css  base.css  bento.css  download.css  flow.css  footer.css  hero.css  mock.css  nav.css  sections.css  tokens.css
scripts/: check-feature-isolation.mjs  fetch-sidecar-bin.mjs
sidecar/: package-lock.json  package.json
sidecar/src/: host.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/src/: git_fetch.rs  jsonl_watcher.rs  lib.rs  main.rs  permissions.rs  worktree.rs
src-tauri/src/auth/: cli_login.rs  commands.rs  credentials_watch.rs  mod.rs  oauth.rs  server.rs  storage.rs
src-tauri/src/commands/: backup.rs  cards.rs  mod.rs  permissions.rs  prefs.rs  projects.rs  sessions.rs  system.rs  usage.rs  user_commands.rs
src-tauri/src/db/: migrations.rs  mod.rs  types.rs
src-tauri/src/session_host/: mod.rs  protocol.rs
src-tauri/src/usage/: ingest.rs  mod.rs  parser.rs  pricing.rs  queries.rs
src/app/: AppShell.tsx  Sidebar.tsx  TopBar.tsx  boot.ts  notifications.ts  shortcuts.ts
src/app/events/: auth.ts  binary.ts  cards.ts  git.ts  index.ts  permissions.ts  session.ts
src/features/auth-gate/: AuthGate.test.tsx  AuthGate.tsx  CliLoginModal.tsx  LoginScreen.tsx
src/features/card-create/: CreateCardModal.test.tsx  CreateCardModal.tsx  index.ts
src/features/kanban/: Board.tsx  BoardHeader.tsx  CardItem.tsx  Column.tsx  KanbanBoard.test.tsx  KanbanBoard.tsx  columns.test.ts  columns.ts  index.ts  selectByColumn.test.ts  state.test.ts  state.ts
src/features/palette/: CommandPalette.test.tsx  CommandPalette.tsx  index.ts
src/features/projects/: CreateProjectModal.tsx  ProjectList.tsx  ProjectsPage.tsx  Sidebar.tsx  index.ts
src/features/session/: Diff.tsx  DiffView.tsx  MessageInput.tsx  MessageList.tsx  PermissionCardActions.tsx  PermissionPanel.tsx  PromptTemplateMenu.tsx  SessionConfigPanel.tsx  SessionPanel.tsx  ZoomView.tsx  format.test.ts  format.ts  index.ts  markdownExport.test.ts  markdownExport.ts  slashCommands.ts  usePermissionActions.ts
src/features/session/badges/: CardBadges.tsx  CardEdge.tsx  index.ts
src/features/session/chat/: ChatTab.tsx  Diff.tsx  MessageInput.tsx  MessageList.tsx  PromptTemplateMenu.tsx  index.ts  slashCommands.test.ts  slashCommands.ts
src/features/session/config/: SessionConfigPanel.tsx  index.ts
src/features/session/diff/: DiffView.tsx  index.ts
src/features/session/header/: EditablePath.tsx  EditableTags.tsx  EditableTitle.test.tsx  (+4 more)
src/features/settings/: SettingsPage.tsx  index.ts  layout.tsx
src/features/swarm/: AgentList.tsx  AgentRow.tsx  EmptyState.tsx  SwarmView.tsx  index.ts  sections.ts  state.ts
src/features/toasts/: ToastStack.tsx  index.ts
src/features/tutorial/: TutorialOverlay.tsx  index.ts  steps.ts  trigger.test.ts  trigger.ts
src/features/usage/: BinaryBanner.tsx  RateLimitMeter.tsx  SubscriptionMeter.tsx  ThemeToggle.tsx  TopBar.tsx  UsageBreakdown.tsx  UsageHeadline.tsx  UsagePage.tsx  UsageRangeSwitcher.tsx  UsageWindow.tsx  format.ts
src/ipc/: auth.ts  backup.ts  cards.ts  db.ts  git.ts  permissions.ts  prefs.ts  projects.ts  sessions.ts  usage.ts
src/lib/: authBus.test.ts  authBus.ts  prefs.ts  sdkBlocks.test.ts  sdkBlocks.ts  shortcuts.test.ts  shortcuts.ts
src/stores/: authStore.test.ts  authStore.ts  cardsStore.test.ts  cardsStore.ts  costsStore.ts  errorsStore.ts  gitStatusStore.ts  messagesStore.ts  permissionRulesStore.test.ts  permissionRulesStore.ts  permissionsStore.ts  projectsStore.test.ts  projectsStore.ts  shortcutsStore.test.ts  shortcutsStore.ts  subscriptionUsageStore.ts  templatesStore.test.ts  templatesStore.ts  themeStore.ts  toastsStore.test.ts  toastsStore.ts  tutorialStore.test.ts  tutorialStore.ts  uiStore.ts  usageIndexStore.ts  usageStore.ts  userCommandsStore.ts
src/styles/: globals.css
src/test/: setup.ts
src/types/: card.ts  chat.ts  project.ts  usage.ts
(+23 files in other folders)
