[package]
name = "claude-kanban"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_kanban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time", "net"] }
# Filesystem watcher for ~/.claude/projects/**/*.jsonl. Lets the kanban catch
# up to sessions running in the CLI (`claude` outside the app) without polling.
notify = "8"
# OAuth login flow (Anthropic / Claude Code) implemented natively in the app
# so users don't need the `claude` CLI installed. `reqwest` for the token
# exchange, `keyring` for the OS credential store (macOS Keychain, Windows
# Credential Manager, Linux Secret Service), `sha2` + `base64` for PKCE
# S256, `rand` for the verifier/state, `dirs` for ~/.claude lookup.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
base64 = "0.22"
rand = "0.8"
dirs = "5"
urlencoding = "2"
whoami = "1"

# Keychain access — macOS only, since the sidecar's `readCredentials()`
# only consults Keychain on darwin (cf. host.mjs:530). Windows/Linux fall
# back to ~/.claude/.credentials.json which we always write too.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }

