[package]
name = "claude-kanban"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "claude_kanban_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
thiserror = "1"
uuid = { version = "1", features = ["v4"] }
tokio = { version = "1", features = ["process", "io-util", "sync", "rt-multi-thread", "macros", "time", "net"] }
# Filesystem watcher for ~/.claude/projects/**/*.jsonl AND for
# ~/.claude/.credentials.json (so the auth UI reacts to `claude login`
# completing without polling).
notify = "8"
# Locate the user's home directory for ~/.claude paths.
dirs = "5"
# Username lookup for the macOS Keychain account name read by the auth status
# code. Cheap fallback when keyring lookups have to be tried with/without
# an explicit account.
whoami = "1"
# PTY-based runner for `claude login`. The CLI prompts interactively
# (Inquirer-style) and only behaves correctly when stdin is a real TTY,
# so we go through portable-pty (ConPTY on Windows, openpty elsewhere).
portable-pty = "0.8"

# Keychain access — macOS only, used solely by `auth::storage::clear()` to
# delete the `Claude Code-credentials` Keychain entry on logout. Read paths
# go through the file fallback (~/.claude/.credentials.json), which `claude
# login` always writes alongside the Keychain entry on every platform.
[target.'cfg(target_os = "macos")'.dependencies]
keyring = { version = "3", features = ["apple-native"] }
